fixtures/success/register.js
module.exports = {
    access_token: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9',
    date: '2024-11-18T00:00:00Z'
  };
  