fixtures/error/authenticateUser_wrongPassword.js
module.exports = {
    statusCode: 401,
    detail: 'Wrong password'
  };
  